--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Nutrition</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
   <nav>
     <div class="main-menu">
       <div class="logo">
-        <img>
+        <img scr="https://assets.nicepagecdn.com/d2cc3eaa/6414576/images/logo-image.png">
       </div>
       <div class="menu-items">
         <ul class="menu-links">
