--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="styles.css">
     <title>Nutrition</title>
 </head>
@@ -10,20 +11,93 @@
   <nav>
     <div class="main-menu">
       <div class="logo">
-        <img scr="https://assets.nicepagecdn.com/d2cc3eaa/6414576/images/logo-image.png">
+        <img src="images/logo.png"/>
       </div>
       <div class="menu-items">
         <ul class="menu-links">
-          <li>Home</li>
-          <li>About me</li>
-          <li>Home</li>
-          <li>Home</li>
-
+          <li class="ho">Home</li>
+          <li class="ab">About me</li>
+          <li class="pa">Pages</li>
+          <li class="co">Contact</li>
         </ul>
-
       </div>
+      <div class="cart-icon">
+        <svg class="u-svg-content" viewBox="0 0 16 16" width="32" height="32" id="svg-23c7">
+          <path d="M14.5,3l-2.1,5H6.1L5.9,7.6L4,3H14.5 M0,0v1h2.1L5,8l-2,4h11v-1H4.6l1-2H13l3-7H3.6L2.8,0H0z
+           M12.5,13 c-0.8,0-1.5,0.7-1.5,1.5s0.7,1.5,1.5,1.5s1.5-0.7,1.5-1.5S13.3,13,12.5,13L12.5,13z
+           M4.5,13C3.7,13,3,13.7,3,14.5S3.7,16,4.5,16 S6,15.3,6,14.5S5.3,13,4.5,13L4.5,13z">
+          </path>
+        </svg>
+      </div>
+      <button class="main-menu-btn">Book An Appointment</button>
     </div>
   </nav>
 </header>
+  <div class="nadpis">
+    <h1>SHOP</h1>
+    <p>Sample text. Click to select the Text Element. Sollicitudin duis erat nisi porttitor litora massa.</p>
+  </div>
+  <select>
+    <option value="All" selected>All</option>
+    <option value="featured">Featured</option>
+    <option value="accessories">Accessories</option>
+  </select>
+<div class="nabidka">
+  <div class="price-container">
+      <img src="images/1breakfast.jpg" height="370" width="320"/>
+      <p>Healthy breakfast</p>
+      <div>
+        <span class="new-price">$18.00</span>
+      </div>
+      <button>ADD TO CART</button>
+  </div>
+  <div>
+      <img src="images/2loss.jpg" height="370" width="320"/>
+      <p>Healthy breakfast</p>
+      <div class="price-container">
+        <span class="old-price">$44.00</span>
+        <span class="new-price">$29.00</span>
+      </div>
+      <button>ADD TO CART</button>
+  </div>
+  <div>
+      <img src="images/3grilled.jpg" height="370" width="320"/>
+      <p>Healthy breakfast</p>
+      <div class="price-container">
+        <span class="old-price">$22.00</span>
+        <span class="new-price">$15.00</span>
+      </div>
+      <button>ADD TO CART</button>
+  </div>
+</div>
+<div class="nabidka">
+  <div class="price-container">
+    <img src="images/4fruit.jpg" height="370" width="320"/>
+    <p>Fruit Mix</p>
+    <div>
+      <span class="old-price">$30.00</span>
+      <span class="new-price">$24.00</span>
+    </div>
+    <button>ADD TO CART</button>
+  </div>
+  <div>
+    <img src="images/5book.png" height="370" width="320"/>
+    <p>The Nutrition Book</p>
+    <div class="price-container">
+      <span class="old-price">$25.00</span>
+      <span class="new-price">$19.00</span>
+    </div>
+    <button>ADD TO CART</button>
+  </div>
+  <div>
+    <img src="images/6shake.jpg" height="370" width="320"/>
+    <p>Best Protein Shakes</p>
+    <div class="price-container">
+      <span class="old-price">$20.00</span>
+      <span class="new-price">$17.00</span>
+    </div>
+    <button>ADD TO CART</button>
+  </div>
+</div>
 </body>
 </html>
