--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Nutrition</title>
 </head>
-<body>
+<body class="body">
 <header>
   <nav>
     <div class="main-menu">
@@ -15,10 +15,10 @@
       </div>
       <div class="menu-items">
         <ul class="menu-links">
-          <li class="ho">Home</li>
-          <li class="ab">About me</li>
-          <li class="pa">Pages</li>
-          <li class="co">Contact</li>
+          <li class="hover1">Home</li>
+          <li class="hover1">About me</li>
+          <li class="hover1">Pages</li>
+          <li class="hover1">Contact</li>
         </ul>
       </div>
       <div class="cart-icon">
@@ -98,6 +98,62 @@
     </div>
     <button>ADD TO CART</button>
   </div>
+</div>
+<div class="free-ebook">
+    <div class="left-side">
+        <img src="images/7ebook.png"/>
+    </div>
+    <div class="right-side">
+        <h2>Get Free eBook!</h2>
+        <p>Do you want to have sustained energy, freedom from hunger and cravings and reduce your risk of illness? Get my FREE eBook here.</p>
+        <p>Image from <a href="https://www.freepik.com/">Freepik</a></p>
+        <div class="ebook-sub">
+            <input type="email" placeholder="Email">
+            <button>Subscribe</button>
+        </div>
+    </div>
+</div>
+<div class="bottom">
+    <div class="bottom-one">
+        <img src="images/logo2.png" height="43" width="210"/>
+        <div>
+            <svg class="facebook" viewBox="0 0 113 112" x="0" y="0" id="svg-6a76"><path fill="currentColor" d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2
+               c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg>
+            <svg class="twitter" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style=""><path fill="currentColor" d="M67.1,49.1L98.6,16h-12L62,42L43.2,16H11l32.8,45.2L11,96h11.6l26.3-27.7L69.1,96H101L67.1,49.1z M55,61.9l-5.1-7L27.5,24.4
+	            h11.4l17.3,23.8l5.1,7.1l23.4,32.2H73.8L55,61.9z"></path></svg>
+            <svg class="instagram" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
+	            M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
+	            V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7
+	            c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg>
+        </div>
+    </div>
+    <div  class="bottom-two">
+        <h3>Quick Links</h3>
+        <ul>
+            <li class="hover2"><a href="#">About Me</a></li>
+            <li class="hover2"><a href="#">Consultation</a></li>
+            <li class="hover2"><a href="#">My Blog</a></li>
+            <li class="hover3"><a href="#">Books</a></li>
+        </ul>
+    </div>
+    <div class="bottom-three">
+        <h3>Contact</h3>
+        <ul>
+            <li class="hover2"><a href="#">Support & Motivation</a></li>
+            <li class="hover2"><a href="#">Weight Loss Programs</a></li>
+            <li class="hover2"><a href="#">Personalized Nutrition</a></li>
+            <li class="hover3"><a href="#">Healthy Daily Life</a></li>
+            <li class="hover2"><a href="#">Balance Body & Mind</a></li>
+        </ul>
+    </div>
+    <div class="bottom-four">
+        <h3>Newsletter</h3>
+        <p>Email</p>
+        <div class="newsletter">
+            <input type="email" placeholder="Enter a valid email address">
+            <button>Submit</button>
+        </div>
+    </div>
 </div>
 </body>
 </html>
